--- a/public/css/front/style.scss
+++ b/public/css/front/style.scss
@@ -4,6 +4,7 @@
 
 
 
+@import '_loading';
 @import '_pop';
 @import '_menuBar';
 @import '_main';
@@ -13,3 +14,4 @@
 @import '_sec04';
 @import '_sec05';
 @import '_swiper';
+@import '_footer';
