--- a/public/css/front/_pop.scss
+++ b/public/css/front/_pop.scss
@@ -7,7 +7,6 @@
     transform: translate(-50%, -50%);
     width: 100vw;
     height: 100vh;
-    // background-color: #000000f3;
     background-image: linear-gradient(135deg, #faffe7eb 0%, #eaffd6 100%);
     padding: 60px;
     letter-spacing: 3px;
@@ -35,8 +34,6 @@
                 margin-bottom: 20px;
             }
             img {
-                // width: 70%;
-                // height: 70%;
                 max-width: 70%;
                 max-height: 70%;
                 width: auto;
@@ -77,7 +74,6 @@
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    // background-color: #000000f3;
     background-image: linear-gradient(135deg, #faffe7eb 0%, #eaffd6 100%);
     padding: 60px;
     letter-spacing: 3px;
@@ -97,25 +93,22 @@
         .info {
             padding: 20px;
             width: 26%;
-            // height: 64%;
             border-radius: 30px;
             text-align: center;
             line-height: 35px;
             font-size: 1.3rem;
             font-weight: 800;
             
-            background-color: rgb(255, 255, 255);
+            // background-color: rgb(255, 255, 255);
             
             @include lmd{
                 width: 35%;
             }
             @include md{
                 width: 60%;
-                // height: 67%;
             }
             @include xs{
                 width: 75%;
-                // height: 71%;
             }
             
             .text,
@@ -124,7 +117,6 @@
                 margin-bottom: 20px;
             }
             img {
-                // position: relative;
                 display: inline-block;
                 width: 100%;
                 height: 100%;
