--- a/public/css/front/_sec02.scss
+++ b/public/css/front/_sec02.scss
@@ -56,6 +56,9 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                @include xxs{
+                    height: 29%;
+                }
                 .numberbox {
                     height: 50%;
                     display: flex;
@@ -109,6 +112,10 @@
                         height: 1.4rem;
                         vertical-align: middle;
                         margin: 0 0.3rem 0.25rem 0;
+                        @include md{
+                            width: 2rem;
+                            height: 2rem;
+                        }
                     }
                     a {
                         margin: 0 0 0 0.5rem;
@@ -184,6 +191,7 @@
                     object-fit: contain;
                 }
                 .reserve {
+                    cursor: pointer;
                     background: url(/img/front/reserve.png);
                 }
                 .reserved {
