--- a/public/css/front/_sec05.scss
+++ b/public/css/front/_sec05.scss
@@ -6,7 +6,7 @@
         z-index: 1;
         width: 100%;
         height: 80%;
-        border: 1px solid red;
+        // border: 1px solid red;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -14,7 +14,7 @@
         .sec5_box1 {
             width: 50%;
             height: 20%;
-            background-color: rgba(116, 146, 136, 0.549);
+            // background-color: rgba(116, 146, 136, 0.549);
             @include md {
                 width: 90%;
             }
@@ -29,23 +29,26 @@
         .sec5_box2 {
             width: 50%;
             height: 80%;
-            background-color: rgba(83, 106, 98, 0.549);
-            @include xxl{
+            // background-color: rgba(83, 106, 98, 0.549);
+            @include xxl {
                 height: 60%;
             }
-            @include lg{
+            @include lg {
                 height: 50%;
                 width: 60%;
             }
-            @include md{
+            @include md {
                 height: 100%;
                 width: 90%;
             }
-            @include xsm{
+            @include xs {
                 width: 75%;
-                height: 72%;
+                height: 71%;
             }
-            @include xxs{
+            @include xsm {
+                height: 61%;
+            }
+            @include xxs {
                 width: 75%;
                 height: 72%;
             }
