--- a/public/css/front/_footer.scss
+++ b/public/css/front/_footer.scss
@@ -91,7 +91,7 @@ footer.section {
     }
 
     img {
-        border: 1px solid red;
+        // border: 1px solid red;
         width: 12%;
         height: 100%;
         object-fit: contain;
