--- a/public/css/front/_sec03.scss
+++ b/public/css/front/_sec03.scss
@@ -36,7 +36,7 @@
         .sec3_box2 {
             width: 70%;
             height: 70%;
-            background-color: rgba(70, 111, 97, 0.549);
+            // background-color: rgba(70, 111, 97, 0.549);
             display: flex;
             justify-content: space-between;
             @include xl() {
@@ -81,7 +81,7 @@
                     // border: 1px solid red;
                     display: flex;
                     justify-content: space-evenly;
-                    @include xl{
+                    @include xl {
                         height: 69%;
                         align-items: center;
                     }
@@ -162,12 +162,13 @@
                     text-align: center;
                     position: relative;
                     overflow: hidden;
-                    margin: 15px 0;
+                    margin: 15px 0 0;
                     p {
                         position: absolute;
                         left: 50%;
                         line-height: 1rem;
                         z-index: 2;
+                        transform: translate(-50%, 0px);
                     }
                 }
                 .white {
@@ -176,10 +177,21 @@
                     width: 100%;
                     // transform: translate(0%);
                 }
+                .numLine {
+                    width: 63%;
+                    height: 2%;
+                    display: flex;
+                    justify-content: space-between;
+                    .lineStr {
+                        background-color: #452806;
+                        width: 1%;
+                        height: 100%;
+                    }
+                }
                 .addMeatBox {
                     width: 100%;
                     height: 15%;
-                    background-color: rgba(31, 64, 53, 0.549);
+                    // background-color: rgba(31, 64, 53, 0.549);
                     display: flex;
                     justify-content: space-evenly;
                     .meatBtn500,
@@ -190,6 +202,7 @@
                         width: 25%;
                         height: 100%;
                         border-radius: 22px;
+                        // font-size: .9rem;
                         font-size: 1.3rem;
                         font-weight: 600;
                         line-height: 1.6rem;
@@ -217,7 +230,7 @@
         .sec3_box3 {
             width: 10%;
             height: 6%;
-            background-color: rgba(94, 135, 121, 0.549);
+            // background-color: rgba(94, 135, 121, 0.549);
             .pointBox {
                 cursor: pointer;
                 width: 100%;
@@ -262,7 +275,7 @@
         .sec3_box1 {
             width: 100%;
             height: 18%;
-            background-color: rgba(116, 146, 136, 0.549);
+            // background-color: rgba(116, 146, 136, 0.549);
             img {
                 position: relative;
                 display: inline-block;
@@ -274,7 +287,7 @@
         .sec3_box2 {
             width: 100%;
             height: 78%;
-            background-color: rgba(70, 111, 97, 0.549);
+            // background-color: rgba(70, 111, 97, 0.549);
             display: flex;
             justify-content: space-between;
             .activity_t {
@@ -397,7 +410,7 @@
                     text-align: center;
                     position: relative;
                     overflow: hidden;
-                    margin: 10px 0;
+                    margin: 10px 0 0;
                     @include md() {
                         width: 80%;
                     }
@@ -406,6 +419,7 @@
                         left: 50%;
                         line-height: 1.5rem;
                         z-index: 1;
+                        transform: translate(-50%, 0px);
                     }
                 }
                 .white {
@@ -414,10 +428,21 @@
                     width: 100%;
                     // transform: translate(0%);
                 }
+                .numLine {
+                    width: 63%;
+                    height: 2%;
+                    display: flex;
+                    justify-content: space-between;
+                    .lineStr {
+                        background-color: #452806;
+                        width: 1%;
+                        height: 100%;
+                    }
+                }
                 .addMeatBox {
                     width: 100%;
                     height: 15%;
-                    background-color: rgba(31, 64, 53, 0.549);
+                    // background-color: rgba(31, 64, 53, 0.549);
                     display: flex;
                     justify-content: space-evenly;
                     .meatBtn500,
@@ -455,7 +480,7 @@
         .sec3_box3 {
             width: 25%;
             height: 7%;
-            background-color: rgba(94, 135, 121, 0.549);
+            // background-color: rgba(94, 135, 121, 0.549);
             margin-top: 1.5rem;
             .pointBox {
                 cursor: pointer;
