--- a/public/css/front/_menuBar.scss
+++ b/public/css/front/_menuBar.scss
@@ -204,6 +204,7 @@
             width: 100%;
             max-width: 103px;
             max-height: 26px;
+            cursor: pointer;
         }
     }
 }
