--- a/public/css/front/_loading.scss
+++ b/public/css/front/_loading.scss
@@ -14,9 +14,12 @@
     transform: translate(-50%, -50%);
     width: 15%;
     text-align: center;
+    @include md{
+        width: 50%;
+    }
     &:after {
         display: block;
-        width: 280px;
+        width: 100%;
         height: 4px;
         border-radius: 10px;
         background: #652b0e;
