--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -284,9 +284,14 @@ textarea {
   width: 15%;
   text-align: center;
 }
+@media all and (max-width: 900px) {
+  .dancing-lao {
+    width: 50%;
+  }
+}
 .dancing-lao:after {
   display: block;
-  width: 280px;
+  width: 100%;
   height: 4px;
   border-radius: 10px;
   background: #652b0e;
@@ -877,6 +882,7 @@ textarea {
   width: 100%;
   max-width: 103px;
   max-height: 26px;
+  cursor: pointer;
 }
 
 .slideBarDown {
@@ -1251,6 +1257,7 @@ body {
 }
 
 .section1 {
+  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2485,14 +2492,19 @@ body {
 }
 .swiper .swiper-slide {
   -webkit-filter: brightness(0.5);
+  opacity: 0.7;
+  scale: 0.9;
 }
 @media all and (max-width: 900px) {
   .swiper .swiper-slide {
+    opacity: 1;
     -webkit-filter: none;
   }
 }
 .swiper .swiper-slide-active + .swiper-slide {
   -webkit-filter: brightness(1);
+  scale: 1;
+  opacity: 1;
 }
 .swiper .swiper-3d .swiper-slide-shadow-left,
 .swiper .swiper-3d .swiper-slide-shadow-right {
