--- a/public/css/front/_sec03.scss
+++ b/public/css/front/_sec03.scss
@@ -62,6 +62,10 @@
                 .text {
                     font-size: 1.4rem;
                     line-height: 1.6rem;
+                    span {
+                        font-size: 1.2rem;
+                        color: #007cd4;
+                    }
                     @include xl() {
                         width: 70%;
                     }
@@ -142,9 +146,11 @@
                 flex-direction: column;
                 align-items: center;
                 .bowl {
-                    height: 60%;
+                    height: 58%;
                     width: 97%;
-                    // border: 1px solid red;
+                    @include lg{
+                        height: 49%;
+                    }
                     img {
                         height: 100%;
                         width: 100%;
@@ -162,7 +168,7 @@
                     text-align: center;
                     position: relative;
                     overflow: hidden;
-                    margin: 15px 0 0;
+                    // margin: 15px 0 0;
                     p {
                         position: absolute;
                         left: 50%;
@@ -307,6 +313,10 @@
                 .text {
                     font-size: 1.4rem;
                     line-height: 1.6rem;
+                    span {
+                        font-size: 1.2rem;
+                        color: #007cd4;
+                    }
                     @include xxs() {
                         width: 55%;
                     }
@@ -386,13 +396,22 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                @include xsm() {
+                    height: 90%;
+                }
+                @include xxs() {
+                    height: 100%;
+                }
                 .bowl {
-                    height: 60%;
+                    height: 58%;
                     width: 97%;
-                    // border: 1px solid red;
                     @include xs() {
                         height: 50%;
                     }
+                    @include xxs() {
+                        height: 47%;
+                    }
+
                     img {
                         height: 100%;
                         width: 100%;
