--- a/public/css/front/_swiper.scss
+++ b/public/css/front/_swiper.scss
@@ -33,9 +33,10 @@
     }
     .swiper-slide {
         -webkit-filter: brightness(0.5);
-        opacity: .7;
-        scale: .9;
+        opacity: 0.7;
+        scale: 0.9;
         @include md() {
+            scale: 1;
             opacity: 1;
             -webkit-filter: none;
         }
@@ -65,7 +66,7 @@
         right: 20%;
         top: 30%;
     }
-    
+
     @include md() {
         right: 0%;
         top: 40%;
@@ -91,4 +92,3 @@
         top: 40%;
     }
 }
-
