--- a/public/css/front/_sec01.scss
+++ b/public/css/front/_sec01.scss
@@ -24,9 +24,6 @@
         z-index: 1;
         width: 100%;
         height: 85%;
-        // max-width: 1920px;
-        // max-height: 950px;
-        // border: 1px solid red;
         .logoBox {
             display: none;
             @include md {
@@ -34,7 +31,6 @@
                 top: 0%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                // background-color: rgba(116, 146, 136, 0.549);
                 display: flex;
                 justify-content: space-evenly;
                 height: 10%;
@@ -51,9 +47,9 @@
                 width: 100%;
                 max-width: 321px;
                 max-height: 106px;
-                // position: absolute;
-                // top: 2%;
-                // left: 2%;rgba(67, 104, 92, 0.549)
+                @include md {
+                    scale: 1.3;
+                }
             }
         }
         .box1,
@@ -74,7 +70,6 @@
             left: 50%;
             height: 50%;
             transform: translate(-50%, -50%);
-            // background-color: rgba(116, 146, 136, 0.549);
             @include md {
                 height: 50%;
                 width: 95%;
@@ -107,7 +102,6 @@
             }
         }
         .box2 {
-            // background-color: rgba(73, 97, 89, 0.549);
             display: none;
             @include md {
                 display: block;
@@ -132,7 +126,6 @@
             }
         }
         .box3 {
-            // background-color: rgba(116, 146, 136, 0.549);
             transform: translate(-50%, -50%);
             top: 39%;
             left: 50%;
