--- a/public/css/front/styleIndex.css
+++ b/public/css/front/styleIndex.css
@@ -1122,7 +1122,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.35);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   pointer-events: none; /* 允許下面元素接收點擊事件 */
 }
@@ -1277,6 +1277,11 @@ body {
     width: 37%;
   }
 }
+@media all and (max-width: 500px) {
+  .section1 .box .logoBox {
+    top: 5%;
+  }
+}
 .section1 .box .logoBox .LOGO {
   background: url(/img/front/LOGO.png);
   background-repeat: no-repeat;
@@ -1309,21 +1314,26 @@ body {
      object-fit: contain;
 }
 .section1 .box .box1 {
-  top: 39%;
+  border: 2px solid red;
+  top: 42%;
   left: 50%;
-  height: 50%;
+  height: 80%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media all and (max-width: 900px) {
   .section1 .box .box1 {
-    height: 50%;
+    height: 62%;
     width: 95%;
-    top: 25%;
+    top: 35%;
   }
 }
 @media all and (max-width: 500px) {
   .section1 .box .box1 {
-    top: 18%;
+    height: 52%;
+    top: 32%;
   }
 }
 .section1 .box .box1 img {
@@ -1339,15 +1349,48 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  max-width: 1181px;
+  max-width: 1174px;
   max-height: 505px;
 }
 @media all and (max-width: 900px) {
   .section1 .box .box1 .sec01TitlePC {
+    max-width: 880px;
+    max-height: 480px;
     background: url(/img/front/sec01TitleMIndex.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+  }
+}
+.section1 .box .box1 .btnBoxPC,
+.section1 .box .box1 .btnBoxM {
+  margin-top: 47px;
+  height: 100%;
+  width: 100%;
+  max-width: 627px;
+  max-height: 87px;
+  display: flex;
+  justify-content: space-between;
+}
+@media all and (max-width: 900px) {
+  .section1 .box .box1 .btnBoxPC,
+  .section1 .box .box1 .btnBoxM {
+    margin-top: 0px;
+    justify-content: center;
+  }
+}
+.section1 .box .box1 .btnBoxPC a,
+.section1 .box .box1 .btnBoxM a {
+  height: 100%;
+  width: 100%;
+  max-width: 293px;
+  max-height: 87px;
+}
+@media all and (max-width: 400px) {
+  .section1 .box .box1 .btnBoxPC a,
+  .section1 .box .box1 .btnBoxM a {
+    height: 80%;
+    width: 80%;
   }
 }
 .section1 .box .box2 {
@@ -1358,16 +1401,16 @@ body {
     display: block;
     height: 32%;
     width: 100%;
-    bottom: 2%;
+    bottom: -8%;
   }
 }
 @media all and (max-width: 500px) {
   .section1 .box .box2 {
-    bottom: 6%;
+    bottom: -10%;
   }
 }
 .section1 .box .box2 .sec01dogM {
-  background: url(/img/front/sec01dogM.png);
+  background: url(/img/front/sec01dogMIndex.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -1416,9 +1459,9 @@ body {
      object-fit: contain;
 }
 .section2 .sec_box .sec2_box2 {
-  width: 40%;
-  height: 77%;
-  background: url(/img/front/sec2_box2Bg.png);
+  width: 70%;
+  height: 70%;
+  background: url(/img/front/sec2_box2BgIndex.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
