--- a/public/css/front/_sec02Index.scss
+++ b/public/css/front/_sec02Index.scss
@@ -37,6 +37,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            justify-content: center;
             @include xxl() {
                 width: 70%;
             }
@@ -48,25 +49,24 @@
                 height: 62%;
             }
 
-            .thumbtack{
+            .thumbtack {
                 position: absolute;
-                top: 8%;
-                left: 20%;
-                transform: translate(0%,-50%);
+                top: 4%;
+                left: 22%;
                 display: inline-block;
                 -o-object-fit: contain;
                 object-fit: contain;
                 z-index: 1;
             }
             .slickBox {
-                border: 1px solid blue;
+                transform: rotate(-2deg);
+                border: 1px solid rgb(34, 90, 36);
                 max-width: 650px;
                 max-height: 450px;
                 width: 50%;
                 height: 100%;
-                // background-color: #fff;
                 overflow: hidden;
-                
+
                 .slickImg {
                     height: 100%;
                     width: 100%;
@@ -80,16 +80,16 @@
                         object-fit: contain;
                     }
                 }
-                ul{
+                ul {
                     position: absolute;
                     bottom: 0;
                     left: 50%;
-                    transform: translate(-50%,-50%);
+                    transform: translate(-50%, -50%);
                     display: flex;
                     li {
                         button {
                             scale: 0.5;
-                            opacity: .8;
+                            opacity: 0.8;
                             color: #808a00;
                             background: #808a00;
                             border: 1px solid #808a00;
@@ -99,20 +99,80 @@
                             }
                         }
                     }
-                    li.slick-active{
+                    li.slick-active {
                         button {
                             color: #fff;
                             background: #fff;
-                            border: 1px solid #fff;
+                            border: 1px solid #808a00;
                         }
                     }
                 }
             }
 
             .news {
-                width: 50%;
-                height: 100%;
-                background-color: bisque;
+                width: 42%;
+                height: 80%;
+                margin-left: 2%;
+                background-color: #ffffff9c;
+                @include md{
+                    width: 90%;
+                }
+                .newsBtn {
+                    letter-spacing: 0.3rem;
+                    cursor: pointer;
+                    background-color: #cbdb00;
+                    width: 6rem;
+                    height: 2.6rem;
+                    border: 0px solid #fff;
+                    border-radius: 1rem 1rem 0rem 0rem;
+                    color: #fff;
+                    font-size: 1.56rem;
+                    font-weight: 600;
+                    &.active {
+                        background-color: #fff;
+                        color: #440300;
+                    }
+                    &:nth-child(2) {
+                        margin: 0 15px;
+                    }
+                }
+                .newsContainer {
+                    width: 100%;
+                    height: 90%;
+                    background-color: #fff;
+                }
+            }
+            .newsContainer {
+                font-size: 1.56rem;
+                font-weight: 500;
+                .text{
+                    padding: 20px 10px;
+                    line-height: 3.4rem;
+                    .textTitle,
+                    .textTime {
+                        letter-spacing: 0.3rem;
+                        color: #440300;
+                    }
+                    .textTitle {
+                        max-width: 21.8rem;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        display: block;
+                    }
+                    .textTime {
+                        letter-spacing: 0rem;
+                        font-size: 1.25rem;
+                    }
+                    span {
+                        color: #ff5b6a;
+                    }
+                    .textBox {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: flex-end;
+                    }
+                }
             }
         }
     }
