--- a/public/css/front/styleIndex.css
+++ b/public/css/front/styleIndex.css
@@ -1468,6 +1468,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 @media all and (max-width: 1775px) {
   .section2 .sec_box .sec2_box2 {
@@ -1487,16 +1488,16 @@ body {
 }
 .section2 .sec_box .sec2_box2 .thumbtack {
   position: absolute;
-  top: 8%;
-  left: 20%;
-  transform: translate(0%, -50%);
+  top: 4%;
+  left: 22%;
   display: inline-block;
   -o-object-fit: contain;
   object-fit: contain;
   z-index: 1;
 }
 .section2 .sec_box .sec2_box2 .slickBox {
-  border: 1px solid blue;
+  transform: rotate(-2deg);
+  border: 1px solid rgb(34, 90, 36);
   max-width: 650px;
   max-height: 450px;
   width: 50%;
@@ -1537,12 +1538,74 @@ body {
 .section2 .sec_box .sec2_box2 .slickBox ul li.slick-active button {
   color: #fff;
   background: #fff;
-  border: 1px solid #fff;
+  border: 1px solid #808a00;
 }
 .section2 .sec_box .sec2_box2 .news {
-  width: 50%;
-  height: 100%;
-  background-color: bisque;
+  width: 42%;
+  height: 80%;
+  margin-left: 2%;
+  background-color: rgba(255, 255, 255, 0.6117647059);
+}
+@media all and (max-width: 900px) {
+  .section2 .sec_box .sec2_box2 .news {
+    width: 90%;
+  }
+}
+.section2 .sec_box .sec2_box2 .news .newsBtn {
+  letter-spacing: 0.3rem;
+  cursor: pointer;
+  background-color: #cbdb00;
+  width: 6rem;
+  height: 2.6rem;
+  border: 0px solid #fff;
+  border-radius: 1rem 1rem 0rem 0rem;
+  color: #fff;
+  font-size: 1.56rem;
+  font-weight: 600;
+}
+.section2 .sec_box .sec2_box2 .news .newsBtn.active {
+  background-color: #fff;
+  color: #440300;
+}
+.section2 .sec_box .sec2_box2 .news .newsBtn:nth-child(2) {
+  margin: 0 15px;
+}
+.section2 .sec_box .sec2_box2 .news .newsContainer {
+  width: 100%;
+  height: 90%;
+  background-color: #fff;
+}
+.section2 .sec_box .sec2_box2 .newsContainer {
+  font-size: 1.56rem;
+  font-weight: 500;
+}
+.section2 .sec_box .sec2_box2 .newsContainer .text {
+  padding: 20px 10px;
+  line-height: 3.4rem;
+}
+.section2 .sec_box .sec2_box2 .newsContainer .text .textTitle,
+.section2 .sec_box .sec2_box2 .newsContainer .text .textTime {
+  letter-spacing: 0.3rem;
+  color: #440300;
+}
+.section2 .sec_box .sec2_box2 .newsContainer .text .textTitle {
+  max-width: 21.8rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
+}
+.section2 .sec_box .sec2_box2 .newsContainer .text .textTime {
+  letter-spacing: 0rem;
+  font-size: 1.25rem;
+}
+.section2 .sec_box .sec2_box2 .newsContainer .text span {
+  color: #ff5b6a;
+}
+.section2 .sec_box .sec2_box2 .newsContainer .text .textBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .section4 {
